src/examples/test-doubles/MockBuilderExampleTest.php.out
./tools/phpunit tests/MockBuilderExampleTest.php
PHPUnit 11.3.3 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.3.11

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 23.02 MB

There was 1 error:

1) MockBuilderExampleTest::testStub
PHPUnit\Framework\MockObject\Generator\ClassIsFinalException: Class "SomeClass" is declared "final" and cannot be doubled

/path/to/tests/MockBuilderExampleTest.php:14

ERRORS!
Tests: 1, Assertions: 0, Errors: 1, PHPUnit Deprecations: 1.
